# tiny_system_monitor

./: Cargo.toml  README.md  install.sh
.github/workflows/: release_on_tag.yml
config/: default.json
config_example/: cats.json
src/: app_config.rs  cpu_device.rs  cpu_info.rs  device_model.rs  file_config.rs  gpu_device.rs  gpu_info.rs  main.rs  main_old.rs  ui.rs
