[package]
name = "system_monitor"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
sysinfo = "0.29.0"
nvml-wrapper = "0.9.0"
serde_json = "1.0.132"
serde = {version="1.0.214", features=["derive"]}
unicode-width = "0.1"

[[bin]]
name = "tsm"
path = "src/main.rs"
